Background update + background overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-body {
-  overflow-x: hidden;
-}
 @keyframes slideOutLeft {
   from {
     transform: translateX(0);
